[gd_scene load_steps=2 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/DialogTemplates/DialogTemplate_Body_CBM.gd" type="Script" id=1]

[node name="DialogTemplate_Body_CBM" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3

[node name="CornerP_TopLeft" type="TextureRect" parent="GridContainer"]
mouse_filter = 2

[node name="Border_Top" type="TextureRect" parent="GridContainer"]
margin_right = 40.0
mouse_filter = 2
size_flags_horizontal = 3
stretch_mode = 2

[node name="CornerP_TopRight" type="TextureRect" parent="GridContainer"]
margin_left = 40.0
margin_right = 40.0
mouse_filter = 2
flip_h = true

[node name="Border_Left" type="TextureRect" parent="GridContainer"]
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 3
stretch_mode = 2

[node name="MidContainer" type="MarginContainer" parent="GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="MidFill" type="TextureRect" parent="GridContainer/MidContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
stretch_mode = 2

[node name="ContentContainer" type="MarginContainer" parent="GridContainer/MidContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Border_Right" type="TextureRect" parent="GridContainer"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 3
stretch_mode = 2
flip_h = true

[node name="CornerP_BotLeft" type="TextureRect" parent="GridContainer"]
margin_top = 40.0
margin_bottom = 40.0
mouse_filter = 2
flip_v = true

[node name="Border_Bot" type="TextureRect" parent="GridContainer"]
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
stretch_mode = 2
flip_v = true

[node name="CornerP_BotRight" type="TextureRect" parent="GridContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
flip_h = true
flip_v = true
